--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+    <!-- 引入reset css -->
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <!-- 引入Iconfont -->
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_726904_ubdf6pmxsf.css">
     <title>project1</title>
   </head>
   <body>
